Added exceptions with @SneakyThrows Annotations